Wed May 16 18:46:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Inline.cpp:
          Prevent for self assignment, also fixes warning in the generated
          code

Wed May 16 16:33:59 UTC 2012  William R. Otte  <wotte@dre.vanderbilt.edu>

        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/TypeInfoSource.cpp:
        * XSC/be/CXX/WriterHeader.cpp:

          Compilation error; compiler warnings.

Wed May 16 12:07:20 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Header.cpp:
          Corrected generation of type for _ptr

Wed May 16 11:56:25 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Header.cpp:
        * XSC/be/CXX/WriterSource.cpp:
        * XSCRT/XSCRT/Elements.hpp:
          Fixes to the generated code

Tue May 15 19:19:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Source.cpp:
        * XSC/be/CXX/WriterSource.cpp:
          Try to get the regeneration of the DAnCE config handlers working
          again

Tue May 15 19:06:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/be/CXX/Elements.hpp:
        * XSC/be/CXX/Elements.cpp:
        * XSC/be/CXX/Source.cpp:
        * XSC/be/CXX/WriterSource.cpp:
        * XSC/be/IDL/Elements.hpp:
          Try to get the regeneration of the DAnCE config handlers working
          again

Mon May 14 14:00:54 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/utils/XSC_Utils.mpc:
          XSC does't use ACE

Sun May 13 12:46:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * XSC/XSC_BE.mpc:
          XSC does't use ACE

Wed May  2 05:12:20 UTC 2012  Dennis Feiock <dfeiock at iupui dot edu>

        * MPC/config/xsc_be.mpb:

          Added boost_system base project to fix compilation errors
          with Boost 1.48.0

Fri Dec 23 18:19:52 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/xsc_be.mpb:
        * XSC/XSC_BE.mpc:
