@@ -1,3 +1,8 @@
+Wed May 16 19:20:05 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * XSC/Parser.cpp:
+          Layout changes
+
 Wed May 16 18:46:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * XSC/be/CXX/Inline.cpp:
